Some small changes

--- a/modified_representation_analysis.ipynb
+++ b/modified_representation_analysis.ipynb
@@ -13,6 +13,36 @@
     {
       "cell_type": "code",
       "execution_count": null,
+      "id": "311bdda1",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import matplotlib.pyplot as plt\n",
+        "from einops import rearrange, reduce, repeat\n",
+        "from timm.utils import AverageMeter\n",
+        "from torch.utils.data import DataLoader\n",
+        "import numpy as np\n",
+        "import torchvision.datasets as datasets\n",
+        "\n",
+        "import os\n",
+        "import math\n",
+        "import torchvision.transforms as transforms\n",
+        "from utils import subsample\n",
+        "\n",
+        "\n",
+        "from transformers import ViTForImageClassification\n",
+        "from models.lora_vit import apply_lora_to_vit\n",
+        "from models.adapt_former import apply_adaptformer_to_vit \n",
+        "from models.bitfit_vit import apply_bitfit_to_vit\n",
+        "\n",
+        "\n",
+        "import matplotlib.cm as cm\n",
+        "from sklearn.manifold import TSNE\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "id": "a1df8817",
       "metadata": {
         "cellView": "form",
@@ -87,15 +117,6 @@
       },
       "outputs": [],
       "source": [
-        "# Cell: Fixed Dataset Loading with Better Subsampling\n",
-        "import os\n",
-        "import math\n",
-        "import numpy as np\n",
-        "from torch.utils.data import DataLoader\n",
-        "import torchvision.datasets as datasets\n",
-        "import torchvision.transforms as transforms\n",
-        "from utils import subsample\n",
-        "\n",
         "DATASET = \"cifar100\"  # @param [\"cifar100\", \"flowers102\"]\n",
         "METHOD = \"pretrained\"       # @param [\"full\", \"lora\", \"adaptformer\", \"bitfit\"]\n",
         "\n",
@@ -189,7 +210,7 @@
         "else:\n",
         "    print(\"No valid dataset found\")\n",
         "    \n",
-        "print(f\"Final status - Dataset: {'Ready' if dataset_test else '❌ None'}\")"
+        "print(f\"Final status - Dataset: {'Ready' if dataset_test else 'None'}\")"
       ]
     },
     {
@@ -204,7 +225,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "id": "286f25d7",
       "metadata": {
         "cellView": "form",
@@ -835,12 +856,6 @@
         }
       ],
       "source": [
-        "import torch\n",
-        "from transformers import ViTForImageClassification\n",
-        "from models.lora_vit import apply_lora_to_vit\n",
-        "from models.adapt_former import apply_adaptformer_to_vit  # Uncomment this\n",
-        "from models.bitfit_vit import apply_bitfit_to_vit          # Uncomment this\n",
-        "\n",
         "def load_finetuned_model(checkpoint_path, dataset_name, method=\"full\"):\n",
         "    \"\"\"Load a fine-tuned model from checkpoint\"\"\"\n",
         "    \n",
@@ -919,7 +934,7 @@
         "methods = [\"full\", \"lora\", \"bitfit\", \"adaptformer\"]\n",
         "datasets = [\"cifar100\", \"flowers102\"]\n",
         "\n",
-        "print(\"🔍 Testing model loading...\")\n",
+        "print(\"Testing model loading...\")\n",
         "for dataset in datasets:\n",
         "    for method in methods:\n",
         "        checkpoint_path = f\"./checkpoints/{dataset}/{method}/best_checkpoint_{dataset}_{method}.pth\"\n",
@@ -949,11 +964,10 @@
         "    print(f\"Selected for analysis: {current_model_key}\")\n",
         "else:\n",
         "    print(f\"Selected model {current_model_key} not available\")\n",
-        "    # Use fallback if available\n",
         "    if available_models:\n",
         "        fallback_key = list(available_models.keys())[0]\n",
         "        selected_model = available_models[fallback_key]\n",
-        "        print(f\"🔄 Using fallback: {fallback_key}\")\n",
+        "        print(f\"Using fallback: {fallback_key}\")\n",
         "    else:\n",
         "        selected_model = None\n",
         "        print(\"No models available\")"
@@ -961,7 +975,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "id": "04d36551",
       "metadata": {},
       "outputs": [
@@ -974,7 +988,6 @@
         }
       ],
       "source": [
-        "# Cell: Analysis Wrapper - Enhanced with Debug Info\n",
         "def create_analysis_wrapper(model):\n",
         "    \"\"\"Wrap the fine-tuned model to match expected interface\"\"\"\n",
         "    def wrapped_forward(x):\n",
@@ -1032,7 +1045,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "id": "c267ba32",
       "metadata": {
         "cellView": "form",
@@ -1125,10 +1138,6 @@
         }
       ],
       "source": [
-        "# Cell: Fourier Analysis - Fixed with Better Error Handling\n",
-        "import matplotlib.pyplot as plt\n",
-        "from einops import rearrange, reduce, repeat\n",
-        "from timm.utils import AverageMeter\n",
         "\n",
         "def fourier(x):\n",
         "    \"\"\"2D Fourier transform\"\"\"\n",
@@ -1163,7 +1172,6 @@
         "        fourier_latents.append(latent)\n",
         "    return fourier_latents\n",
         "\n",
-        "# Run Fourier analysis with better error handling\n",
         "if wrapped_model is not None and dataset_test is not None:\n",
         "    print(f\"Running Fourier Analysis for {DATASET}_{METHOD}...\")\n",
         "    \n",
@@ -1201,7 +1209,7 @@
         "                print(\"No valid hidden states in this batch\")\n",
         "            \n",
         "            batch_count += 1\n",
-        "            if batch_count >= 3:  # Process a few batches\n",
+        "            if batch_count >= 3:\n",
         "                break\n",
         "                \n",
         "        except Exception as e:\n",
@@ -1243,7 +1251,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "id": "c0ebd559",
       "metadata": {
         "cellView": "form",
@@ -1302,13 +1310,6 @@
         }
       ],
       "source": [
-        "# Cell: t-SNE Analysis - Fixed with Better Error Handling\n",
-        "import numpy as np\n",
-        "import matplotlib.pyplot as plt\n",
-        "import matplotlib.cm as cm\n",
-        "from sklearn.manifold import TSNE\n",
-        "from einops import rearrange, reduce, repeat\n",
-        "\n",
         "def visualize_token_tsne(ax, zs, depth, ys, title=\"\", cmap=cm.get_cmap(\"plasma\")): \n",
         "    if depth >= len(zs) or zs[depth] is None:\n",
         "        ax.text(0.5, 0.5, \"No data available\", ha='center', va='center', transform=ax.transAxes)\n",
@@ -1317,7 +1318,7 @@
         "    latents = zs[depth]\n",
         "    print(f\"t-SNE input shape: {latents.shape}\")\n",
         "    \n",
-        "    latents = latents[:,1:,:]  # drop cls\n",
+        "    latents = latents[:,1:,:]\n",
         "    latents = rearrange(latents, \"b n c -> (b n) c\")\n",
         "    latents = latents.cpu()\n",
         "    \n",
@@ -1344,7 +1345,6 @@
         "    ax.set_xticks([])\n",
         "    ax.set_yticks([])\n",
         "\n",
-        "# Run t-SNE analysis with better error handling\n",
         "if wrapped_model is not None and dataset_test is not None:\n",
         "    print(f\"Running t-SNE Analysis for {DATASET}_{METHOD}...\")\n",
         "    \n",
@@ -1382,7 +1382,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "id": "c1e567d3",
       "metadata": {},
       "outputs": [
@@ -1656,12 +1656,6 @@
         }
       ],
       "source": [
-        "# Cell: Comparative Fourier Analysis - All Models\n",
-        "import matplotlib.pyplot as plt\n",
-        "from einops import rearrange, reduce, repeat\n",
-        "from timm.utils import AverageMeter\n",
-        "import numpy as np\n",
-        "\n",
         "def fourier(x):\n",
         "    \"\"\"2D Fourier transform\"\"\"\n",
         "    f = torch.fft.fft2(x)\n",
@@ -1737,7 +1731,6 @@
         "        print(f\"No valid data collected\")\n",
         "        return None\n",
         "\n",
-        "# Run comparative analysis if we have models and dataset\n",
         "if available_models and dataset_test is not None:\n",
         "    print(f\"Running Comparative Fourier Analysis for {DATASET.upper()}...\")\n",
         "    \n",
