--- a/modified_self_attention_analysis.ipynb
+++ b/modified_self_attention_analysis.ipynb
@@ -12,6 +12,34 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "id": "60459ba8",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import matplotlib.pyplot as plt\n",
+        "import torch.nn.functional as F \n",
+        "from einops import rearrange, reduce, repeat\n",
+        "from timm.utils import AverageMeter\n",
+        "import numpy as np\n",
+        "\n",
+        "\n",
+        "import os\n",
+        "import math\n",
+        "from torch.utils.data import DataLoader, Subset\n",
+        "import torchvision.datasets as datasets\n",
+        "import torchvision.transforms as transforms\n",
+        "\n",
+        "import torch\n",
+        "from transformers import ViTForImageClassification\n",
+        "from models.lora_vit import apply_lora_to_vit\n",
+        "from models.adapt_former import apply_adaptformer_to_vit\n",
+        "from models.bitfit_vit import apply_bitfit_to_vit\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": 1,
       "id": "6e66eb9f",
       "metadata": {
@@ -111,14 +139,6 @@
         }
       ],
       "source": [
-        "import os\n",
-        "import math\n",
-        "import numpy as np\n",
-        "import torch\n",
-        "from torch.utils.data import DataLoader, Subset\n",
-        "import torchvision.datasets as datasets\n",
-        "import torchvision.transforms as transforms\n",
-        "\n",
         "# Configuration\n",
         "DATASET = \"cifar100\"  # @param [\"cifar100\", \"flowers102\"]\n",
         "METHOD = \"pretrained\"       # @param [\"full\", \"lora\", \"bitfit\", \"adaptformer\"]\n",
@@ -212,7 +232,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "id": "f959e0ff",
       "metadata": {
         "cellView": "form",
@@ -857,12 +877,6 @@
         }
       ],
       "source": [
-        "import torch\n",
-        "from transformers import ViTForImageClassification\n",
-        "from models.lora_vit import apply_lora_to_vit\n",
-        "from models.adapt_former import apply_adaptformer_to_vit\n",
-        "from models.bitfit_vit import apply_bitfit_to_vit\n",
-        "\n",
         "def load_finetuned_model(checkpoint_path, dataset_name, method=\"full\"):\n",
         "    \"\"\"Load a fine-tuned model from checkpoint with full method support\"\"\"\n",
         "    \n",
@@ -1014,7 +1028,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "id": "17b41b3c",
       "metadata": {
         "cellView": "form",
@@ -1073,9 +1087,6 @@
         }
       ],
       "source": [
-        "# Cell: Attention Map Visualization - Enhanced Error Handling\n",
-        "import matplotlib.pyplot as plt\n",
-        "\n",
         "def mark_token(ax, xs, batch, i, j, color='tab:red'):\n",
         "    import matplotlib.patches as patches\n",
         "    from einops import rearrange\n",
@@ -1220,6 +1231,191 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "29599104",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def mark_token(ax, xs, batch, i, j, color='tab:red'):\n",
+        "    \"\"\"Mark a specific token on the image\"\"\"\n",
+        "    # Denormalize for visualization\n",
+        "    device = xs.device\n",
+        "    mean = torch.tensor([0.485, 0.456, 0.406]).view(3, 1, 1).to(device)\n",
+        "    std = torch.tensor([0.229, 0.224, 0.225]).view(3, 1, 1).to(device)\n",
+        "    xs_denorm = xs * std + mean\n",
+        "    xs_denorm = torch.clamp(xs_denorm, 0, 1)\n",
+        "    \n",
+        "    # Move to CPU for visualization\n",
+        "    xs_denorm_cpu = xs_denorm.cpu()\n",
+        "    \n",
+        "    ax.imshow(rearrange(xs_denorm_cpu[batch], 'c h w -> h w c'))\n",
+        "    ax.set_axis_off()\n",
+        "\n",
+        "    # Create rectangle patch to visualize the query token\n",
+        "    rect = patches.Rectangle((16*i, 16*j), 16, 16, linewidth=3, \n",
+        "                             edgecolor=color, facecolor='none')\n",
+        "    ax.add_patch(rect)\n",
+        "\n",
+        "def visualize_attn(ax, attns, batch, i, j, depth, head):\n",
+        "    \"\"\"Visualize attention maps for fine-tuned models\"\"\"\n",
+        "    \n",
+        "    if depth >= len(attns) or attns[depth] is None:\n",
+        "        ax.text(0.5, 0.5, f\"No data\\n(layer {depth})\", \n",
+        "               ha='center', va='center', transform=ax.transAxes, fontsize=8)\n",
+        "        ax.set_axis_off()\n",
+        "        return False\n",
+        "    \n",
+        "    attn = attns[depth]\n",
+        "    \n",
+        "    if batch >= attn.shape[0]:\n",
+        "        ax.text(0.5, 0.5, f\"Batch OOR\", ha='center', va='center', \n",
+        "               transform=ax.transAxes, fontsize=8)\n",
+        "        ax.set_axis_off()\n",
+        "        return False\n",
+        "    \n",
+        "    attn_batch = attn[batch]\n",
+        "    \n",
+        "    if attn_batch.dim() == 3:  # (num_heads, seq_len, seq_len)\n",
+        "        if head >= attn_batch.shape[0]:\n",
+        "            ax.text(0.5, 0.5, f\"Head OOR\", ha='center', va='center', \n",
+        "                   transform=ax.transAxes, fontsize=8)\n",
+        "            ax.set_axis_off()\n",
+        "            return False\n",
+        "        attn_head = attn_batch[head]\n",
+        "    elif attn_batch.dim() == 2:\n",
+        "        attn_head = attn_batch\n",
+        "    else:\n",
+        "        ax.text(0.5, 0.5, f\"Bad shape\", ha='center', va='center', \n",
+        "               transform=ax.transAxes, fontsize=8)\n",
+        "        ax.set_axis_off()\n",
+        "        return False\n",
+        "    \n",
+        "    # Remove CLS token\n",
+        "    attn_no_cls = attn_head[1:, 1:]  \n",
+        "    \n",
+        "    # Normalize\n",
+        "    attn_norm = attn_no_cls / attn_no_cls.sum(dim=-1, keepdim=True)\n",
+        "    \n",
+        "    # Get attention for specific query token\n",
+        "    seq_len = int(math.sqrt(attn_norm.shape[0]))\n",
+        "    \n",
+        "    if seq_len * seq_len != attn_norm.shape[0]:\n",
+        "        ax.text(0.5, 0.5, f\"Non-square\", ha='center', va='center', \n",
+        "               transform=ax.transAxes, fontsize=8)\n",
+        "        ax.set_axis_off()\n",
+        "        return False\n",
+        "    \n",
+        "    query_idx = j * seq_len + i\n",
+        "    \n",
+        "    if query_idx >= attn_norm.shape[0]:\n",
+        "        ax.text(0.5, 0.5, f\"Query OOR\", ha='center', va='center', \n",
+        "               transform=ax.transAxes, fontsize=8)\n",
+        "        ax.set_axis_off()\n",
+        "        return False\n",
+        "        \n",
+        "    attn_map = attn_norm[query_idx].reshape(seq_len, seq_len)\n",
+        "    \n",
+        "    ax.imshow(attn_map.cpu().numpy(), cmap=\"plasma\")\n",
+        "    ax.set_xticks([])\n",
+        "    ax.set_yticks([])\n",
+        "    ax.set_axis_off()\n",
+        "    return True\n",
+        "\n",
+        "\n",
+        "def visualize_attention_grid(models_dict, xs, token_positions, depths, \n",
+        "                             batch=0, head=0, dataset_name=\"\", figsize=(18, 8)):\n",
+        "    \"\"\"\n",
+        "    Create a grid visualization comparing attention maps across models, depths, and tokens.\n",
+        "    \n",
+        "    Args:\n",
+        "        models_dict: Dictionary mapping method names to model objects\n",
+        "        xs: Input tensor (batch, channels, height, width)\n",
+        "        token_positions: List of (i, j) tuples for query token positions\n",
+        "        depths: List of layer depths to visualize\n",
+        "        batch: Batch index to use\n",
+        "        head: Attention head to use\n",
+        "        dataset_name: Name of dataset for title\n",
+        "        figsize: Figure size\n",
+        "    \"\"\"\n",
+        "    \n",
+        "    num_tokens = len(token_positions)\n",
+        "    num_methods = len(models_dict)\n",
+        "    num_depths = len(depths)\n",
+        "    \n",
+        "    # Total columns: 1 (input image) + num_methods * num_depths\n",
+        "    num_cols = 1 + num_methods * num_depths\n",
+        "    num_rows = num_tokens\n",
+        "    \n",
+        "    print(num_cols, num_rows)\n",
+        "    \n",
+        "    fig, axes = plt.subplots(num_rows, num_cols, figsize=figsize, dpi=150)\n",
+        "    \n",
+        "    # Ensure axes is 2D\n",
+        "    if num_rows == 1:\n",
+        "        axes = axes.reshape(1, -1)\n",
+        "    \n",
+        "    colors = ['cyan', 'magenta', 'yellow', 'lime', 'red']\n",
+        "    \n",
+        "    # Process each token position (row)\n",
+        "    for row_idx, (i, j) in enumerate(token_positions):\n",
+        "        color = colors[row_idx % len(colors)]\n",
+        "        \n",
+        "        # First column: Show input image with token marked\n",
+        "        ax = axes[row_idx, 0]\n",
+        "        mark_token(ax, xs, batch, i, j, color=color)\n",
+        "        if row_idx == 0:\n",
+        "            ax.set_title(\"Input\\n(Token Position)\", fontsize=10, fontweight='bold')\n",
+        "        \n",
+        "        # Get attention maps for all models\n",
+        "        col_idx = 1\n",
+        "        \n",
+        "        for method_name, model in models_dict.items():\n",
+        "            with torch.no_grad():\n",
+        "                xs_device = xs.to(next(model.parameters()).device)\n",
+        "                _, _, attns, _ = model.forward_analysis(xs_device)\n",
+        "            \n",
+        "            # Visualize each depth\n",
+        "            for depth in depths:\n",
+        "                ax = axes[row_idx, col_idx]\n",
+        "                success = visualize_attn(ax, attns, batch, i, j, depth, head)\n",
+        "                \n",
+        "                # Add column title (only for first row)\n",
+        "                if row_idx == 0:\n",
+        "                    title = f\"{method_name.upper().split('_')[-1]}\\nLayer {depth}\"\n",
+        "                    ax.set_title(title, fontsize=10, fontweight='bold')\n",
+        "                \n",
+        "                col_idx += 1\n",
+        "    \n",
+        "    # Add overall title\n",
+        "    fig.suptitle(f\"Attention Map Comparison - {dataset_name.upper()} (Head {head})\", \n",
+        "                 fontsize=14, fontweight='bold')\n",
+        "    \n",
+        "    # Adjust spacing - reduce gaps between subplots and adjust for title\n",
+        "    plt.subplots_adjust(left=0.01, right=0.98, top=0.78, bottom=0.02, \n",
+        "                       wspace=0.05, hspace=0.1)\n",
+        "    return fig\n",
+        "\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "b7b68c1c",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "all_batches = list(dataset_test)\n",
+        "xs, ys = all_batches[1] \n",
+        "\n",
+        "# xs, ys = next(iter(dataset_test))\n",
+        "\n",
+        "fig = visualize_attention_grid(models, xs, [(8,1), (1,8)], [0, 8], figsize=(16,3.5))\n",
+        "plt.show()"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "id": "b7f8f456",
       "metadata": {
@@ -1231,7 +1427,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "id": "7dad3f9d",
       "metadata": {
         "cellView": "form",
@@ -1262,9 +1458,7 @@
         }
       ],
       "source": [
-        "# Cell: Attention Distance Analysis - Updated for Fine-tuned Models\n",
-        "import numpy as np\n",
-        "from timm.utils import AverageMeter\n",
+        "\n",
         "\n",
         "def compute_distance_matrix(patch_size, num_patches, length):\n",
         "    \"\"\"Helper function to compute distance matrix.\"\"\"\n",
@@ -1364,7 +1558,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "id": "7cfc022f",
       "metadata": {
         "cellView": "form",
@@ -1395,9 +1589,6 @@
         }
       ],
       "source": [
-        "# Cell: Normalized Mutual Information Analysis - Updated for Fine-tuned Models\n",
-        "import torch.nn.functional as F \n",
-        "from einops import rearrange, reduce, repeat\n",
         "\n",
         "def calculate_nmi(attn): \n",
         "    \"\"\"Normalized mutual information with return type of (batch, head)\"\"\"\n",
@@ -1476,7 +1667,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "id": "cdb85c84",
       "metadata": {},
       "outputs": [
@@ -1525,10 +1716,7 @@
         }
       ],
       "source": [
-        "# Cell: Comparative Attention Distance Analysis - All Models\n",
-        "import matplotlib.pyplot as plt\n",
-        "import numpy as np\n",
-        "from timm.utils import AverageMeter\n",
+        "\n",
         "\n",
         "def compute_distance_matrix(patch_size, num_patches, length):\n",
         "    \"\"\"Helper function to compute distance matrix.\"\"\"\n",
@@ -1700,7 +1888,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "id": "b0a9f4ce",
       "metadata": {},
       "outputs": [
@@ -1749,13 +1937,6 @@
         }
       ],
       "source": [
-        "# Cell: Comparative Attention NMI Analysis - All Models\n",
-        "import matplotlib.pyplot as plt\n",
-        "import torch.nn.functional as F \n",
-        "from einops import rearrange, reduce, repeat\n",
-        "from timm.utils import AverageMeter\n",
-        "import numpy as np\n",
-        "\n",
         "def calculate_nmi(attn): \n",
         "    \"\"\"Normalized mutual information with return type of (batch, head)\"\"\"\n",
         "    b, h, q, k = attn.shape\n",
@@ -1922,7 +2103,7 @@
     },
     "gpuClass": "standard",
     "kernelspec": {
-      "display_name": "vitlora",
+      "display_name": "ATDLA3-cl-vs-mim",
       "language": "python",
       "name": "python3"
     },
@@ -1936,7 +2117,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.19"
+      "version": "3.11.3"
     }
   },
   "nbformat": 4,
